# FH-STECE2023

./: .gitmodules  CMakeLists.txt  test.txt
src/door/: CMakeLists.txt  adc-ads1115.cpp  adc-ads1115.h  analog-sensor-mock.cpp  analog-sensor-mock.h  analog-sensor.h  pressure-sensor-bmp280.cpp  pressure-sensor-bmp280.h
src/door/utilities/: i2c.cpp  i2c.h
